# deker-server-adapters

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: on_push.yml  on_release.yml  on_test_release.yml
deker_server_adapters/: __init__.py  array_adapter.py  base.py  cluster_config.py  collection_adapter.py  consts.py  errors.py  factory.py  hash_ring.py  httpx_client.py  models.py  utils.py  varray_adapter.py
deker_server_adapters/utils/: hashing.py  requests.py  version.py
docs/: conf.py  index.rst
docs/source/api/: deker_server_adapters.rst  modules.rst
tests/: conftest.py  mocks.py
tests/plugins/: cluster.py
tests/test_cases/: test_array_adapter.py  test_factory.py  test_httpx_client.py  test_rate_limits.py  test_varray_adapters.py
tests/test_cases/test_cluster/: conftest.py  test_array_adapter.py  test_factory.py  test_httpx_client.py  test_varray_adapters.py
tests/test_cases/test_common/: test_array_adapter.py  test_collection_adapter.py  test_factory.py  test_rate_limits.py  test_utils.py  test_varray_adapters.py
tests/test_cases/test_single_server/: conftest.py  test_array_adapter.py  test_factory.py  test_rate_limits.py  test_utils.py  test_varray_adapters.py
